IS_Button/build/log/idf_py_stdout_output_65219
[1/12] Building C object esp-idf/gpio/CMakeFiles/__idf_gpio.dir/gpio.c.obj
FAILED: esp-idf/gpio/CMakeFiles/__idf_gpio.dir/gpio.c.obj 
/home/metisa/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2-dev-1128-g03d4fa2869-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button/build/config -I/home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button/Libs/gpio/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/newlib/platform_include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/freertos/config/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/freertos/config/include/freertos -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/freertos/config/xtensa/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/freertos/esp_additions/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_hw_support/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_hw_support/include/soc -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_hw_support/port/esp32/. -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/heap/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/log/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/soc/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/soc/esp32 -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/soc/esp32/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/hal/esp32/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/hal/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/hal/platform_port/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_rom/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_rom/include/esp32 -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_rom/esp32 -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_common/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_system/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_system/port/soc -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_system/port/include/private -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/xtensa/esp32/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/xtensa/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/xtensa/deprecated_include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/lwip/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/lwip/include/apps -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/lwip/include/apps/sntp -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/lwip/lwip/src/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/lwip/port/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/lwip/port/freertos/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/lwip/port/esp32xx/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/deprecated -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/analog_comparator/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/dac/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/gpio/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/gptimer/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/i2c/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/i2s/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/ledc/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/mcpwm/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/parlio/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/pcnt/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/rmt/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/sdio_slave/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/sdmmc/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/sigma_delta/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/spi/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/temperature_sensor/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/touch_sensor/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/twai/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/uart/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/usb_serial_jtag/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/driver/touch_sensor/esp32/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_pm/include -I/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button=. -fmacro-prefix-map=/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/gpio/CMakeFiles/__idf_gpio.dir/gpio.c.obj -MF esp-idf/gpio/CMakeFiles/__idf_gpio.dir/gpio.c.obj.d -o esp-idf/gpio/CMakeFiles/__idf_gpio.dir/gpio.c.obj -c /home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button/Libs/gpio/gpio.c
In file included from /home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button/Libs/gpio/gpio.c:5:
/home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button/Libs/gpio/gpio.c: In function 'GpioIsrHandler':
/home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button/Libs/gpio/gpio.c:11:23: error: 'xQueue_option' undeclared (first use in this function); did you mean 'xQueue_gpio'?
   11 |     xQueueSendFromISR(xQueue_option, &gpio_pin, NULL);
      |                       ^~~~~~~~~~~~~
/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/queue.h:1352:33: note: in definition of macro 'xQueueSendFromISR'
 1352 |     xQueueGenericSendFromISR( ( xQueue ), ( pvItemToQueue ), ( pxHigherPriorityTaskWoken ), queueSEND_TO_BACK )
      |                                 ^~~~~~
/home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button/Libs/gpio/gpio.c:11:23: note: each undeclared identifier is reported only once for each function it appears in
   11 |     xQueueSendFromISR(xQueue_option, &gpio_pin, NULL);
      |                       ^~~~~~~~~~~~~
/home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/queue.h:1352:33: note: in definition of macro 'xQueueSendFromISR'
 1352 |     xQueueGenericSendFromISR( ( xQueue ), ( pvItemToQueue ), ( pxHigherPriorityTaskWoken ), queueSEND_TO_BACK )
      |                                 ^~~~~~
/home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button/Libs/gpio/gpio.c: In function 'GpioInit':
/home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button/Libs/gpio/gpio.c:25:62: error: 'pin' undeclared (first use in this function)
   25 |         gpio_isr_handler_add(number, GpioIsrHandler, (void*) pin);
      |                                                              ^~~
[2/12] Performing build step for 'bootloader'
[1/1] cd /home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button/build/bootloader/esp-idf/esptool_py && /home/metisa/.espressif/python_env/idf5.2_py3.10_env/bin/python /home/metisa/Documents/ESP32/ESP_WorkSpace/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/metisa/Documents/ESP32/ESP_WorkSpace/ESP32_Intership/IS_Button/build/bootloader/bootloader.bin
Bootloader binary size 0x68a0 bytes. 0x760 bytes (7%) free.
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/IS_Button.c.obj
ninja: build stopped: subcommand failed.
